# fitness-backend

./: .gitignore  .pre-commit-config.yaml  GIT_SETUP_GUIDE.md  PYTHON_VERSION_STATUS.md  README.md  SETUP_PYTHON_311.md  STATUS_PYTHON314.md  alembic.ini  apply_migration.py  check_all_exercises.py  check_classification_data.py  check_data.py  check_db_schema.py  check_excel.py  check_exercise_data.py  check_exercises_table.py  check_permissions.py  check_user_role.py  create_coach_user.py  create_contraction_type.py  create_error_log.txt  create_simple_exercise.py  create_tables.sql  create_test_exercises.py  create_test_exercises_with_classifications.py  database_schema.json  debug_login.ps1  debug_user.ps1  debug_user_issue.py  demo_simple.ps1  fix_alembic.py  fix_password_hashes.py  get_coach_token.ps1  import_all_exercises.py  import_exercises.py  pyproject.toml  quick_test.ps1  remove_hardcoded_columns.py  requirements-prod.txt  requirements.txt  (+36 more)
alembic/versions/: add_exercise_dynamic_fields.py  add_plan_description_goal_level.py  make_exercises_table_dynamic.py  remove_hardcoded_exercise_columns.py
docs/: API_EXERCISES.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  add_classification_tables.py  create_dynamic_exercise_system.py  update_exercise_table.py
scripts/: inspect_database.py
src/: main.py
src/api/: deps.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  auth.py  classification.py  exercise.py  health.py  plan.py  user.py
src/core/: __init__.py  config.py  database.py  security.py
src/crud/: __init__.py  base.py  classification.py  exercise.py  plan.py  user.py
src/models/: __init__.py  base.py  classification.py  exercise.py  plan.py  user.py
src/schemas/: __init__.py  auth.py  classification.py  common.py  exercise.py  plan.py  user.py  workout.py
src/services/: plan_generator.py
tests/: conftest.py
tests/unit/: __init__.py  test_basic_api.py  test_basic_api_python314.py  test_classification_endpoints.py  test_exercise_crud.py  test_exercise_endpoints.py  test_plan_crud.py  test_plan_generator.py
